[metadata]
name = panda3d-openvr
author = Laurent Deru
author_email = laurent.deru@gmail.com
license_file = LICENSE.txt
home-page = https://github.com/el-dee/panda3d-openvr
description = OpenVR support for Panda3D
long-description = file: README.md
long-description-content-type = text/markdown
license = BSD
license-file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include-package-data = true

[global]
verbose=0
